--- a/css/styles.css
+++ b/css/styles.css
@@ -336,6 +336,289 @@ nav .links a {
     width: 270px !important;
   }
 }
+.main-gallery-space {
+  min-height: 640px;
+  max-width: 981px;
+  margin: 0 auto;
+  padding-top: 156px;
+  padding-left: 5px;
+}
+.main-gallery-space .gallery-title {
+  width: 220px;
+  height: 31px;
+  border-bottom: 2px solid black;
+  margin-bottom: 30px;
+}
+.main-gallery-space .gallery-title p {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 25px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+.main-gallery-space .gallery-images {
+  display: flex;
+  flex-wrap: wrap;
+}
+.main-gallery-space .gallery-images .gal-image1 {
+  width: 489px;
+  height: 187px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+.main-gallery-space .gallery-images .gal-image1 img {
+  width: 489px;
+  height: 187px;
+  object-fit: cover;
+}
+.main-gallery-space .gallery-images .gal-image1 .gal-image1-overlay {
+  position: absolute;
+  width: 489px;
+  height: 187px;
+  background-color: rgba(255, 209, 64, 0.7);
+}
+.main-gallery-space .gallery-images .gal-image2 {
+  width: 187px;
+  height: 187px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+.main-gallery-space .gallery-images .gal-image2 img {
+  width: 187px;
+  height: 187px;
+  object-fit: cover;
+}
+.main-gallery-space .gallery-images .gal-image2 .gal-image2-overlay {
+  position: absolute;
+  width: 187px;
+  height: 187px;
+  background-color: rgba(238, 67, 103, 0.7);
+}
+.main-gallery-space .gallery-images .gal-image3 {
+  width: 265px;
+  height: 187px;
+  margin-bottom: 20px;
+}
+.main-gallery-space .gallery-images .gal-image3 img {
+  width: 265px;
+  height: 187px;
+  object-fit: cover;
+}
+.main-gallery-space .gallery-images .gal-image3 .gal-image3-overlay {
+  position: absolute;
+  width: 265px;
+  height: 187px;
+  background-color: rgba(8, 173, 105, 0.7);
+}
+.main-gallery-space .gallery-images .gal-image4 {
+  width: 603px;
+  height: 306px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+.main-gallery-space .gallery-images .gal-image4 img {
+  width: 603px;
+  height: 306px;
+  object-fit: cover;
+}
+.main-gallery-space .gallery-images .gal-image4 .gal-image4-overlay {
+  position: absolute;
+  width: 603px;
+  height: 306px;
+  background-color: rgba(84, 13, 110, 0.7);
+}
+.main-gallery-space .gallery-images .gal-image5 {
+  width: 358px;
+  height: 306px;
+  margin-bottom: 70px;
+}
+.main-gallery-space .gallery-images .gal-image5 img {
+  width: 358px;
+  height: 306px;
+  object-fit: cover;
+}
+.main-gallery-space .gallery-images .gal-image5 .gal-image5-overlay {
+  position: absolute;
+  width: 358px;
+  height: 306px;
+  background-color: rgba(59, 206, 171, 0.7);
+}
+
+@media only screen and (max-width: 1002px) {
+  .main-gallery-space {
+    margin-left: 27%;
+  }
+  .main-gallery-space .gallery-images .gal-image2 {
+    width: 220px;
+  }
+  .main-gallery-space .gallery-images .gal-image2 img {
+    width: 220px;
+  }
+  .main-gallery-space .gallery-images .gal-image2 .gal-image2-overlay {
+    width: 220px;
+  }
+  .main-gallery-space .gallery-images .gal-image3 {
+    margin-right: 20px;
+    width: 250px;
+  }
+  .main-gallery-space .gallery-images .gal-image3 img {
+    width: 250px;
+  }
+  .main-gallery-space .gallery-images .gal-image3 .gal-image3-overlay {
+    width: 250px;
+  }
+  .main-gallery-space .gallery-images .gal-image4 {
+    height: 187px;
+    width: 250px;
+  }
+  .main-gallery-space .gallery-images .gal-image4 img {
+    width: 250px;
+    height: 187px;
+  }
+  .main-gallery-space .gallery-images .gal-image4 .gal-image4-overlay {
+    height: 187px;
+    width: 250px;
+  }
+  .main-gallery-space .gallery-images .gal-image5 {
+    height: 187px;
+    width: 220px;
+  }
+  .main-gallery-space .gallery-images .gal-image5 img {
+    width: 220px;
+    height: 187px;
+  }
+  .main-gallery-space .gallery-images .gal-image5 .gal-image5-overlay {
+    height: 187px;
+    width: 220px;
+  }
+}
+@media only screen and (max-width: 722px) {
+  .main-gallery-space {
+    margin-left: 0;
+  }
+  .main-gallery-space .gallery-title {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .main-gallery-space .gallery-images {
+    margin-left: 23%;
+  }
+  .main-gallery-space .gallery-images .gal-image1 {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image1 img {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image1 .gal-image1-overlay {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image2 {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image2 img {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image2 .gal-image2-overlay {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image3 {
+    margin-right: 20px;
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image3 img {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image3 .gal-image3-overlay {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image4 {
+    height: 187px;
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image4 img {
+    width: 400px;
+    height: 187px;
+  }
+  .main-gallery-space .gallery-images .gal-image4 .gal-image4-overlay {
+    height: 187px;
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image5 {
+    height: 187px;
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image5 img {
+    width: 400px;
+    height: 187px;
+  }
+  .main-gallery-space .gallery-images .gal-image5 .gal-image5-overlay {
+    height: 187px;
+    width: 400px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .main-gallery-space {
+    margin-left: 0;
+  }
+  .main-gallery-space .gallery-title {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .main-gallery-space .gallery-images {
+    margin-left: 8%;
+  }
+  .main-gallery-space .gallery-images .gal-image1 {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image1 img {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image1 .gal-image1-overlay {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image2 {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image2 img {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image2 .gal-image2-overlay {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image3 {
+    margin-right: 20px;
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image3 img {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image3 .gal-image3-overlay {
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image4 {
+    height: 187px;
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image4 img {
+    width: 400px;
+    height: 187px;
+  }
+  .main-gallery-space .gallery-images .gal-image4 .gal-image4-overlay {
+    height: 187px;
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image5 {
+    height: 187px;
+    width: 400px;
+  }
+  .main-gallery-space .gallery-images .gal-image5 img {
+    width: 400px;
+    height: 187px;
+  }
+  .main-gallery-space .gallery-images .gal-image5 .gal-image5-overlay {
+    height: 187px;
+    width: 400px;
+  }
+}
 .gallerySpace {
   height: 800px;
   max-width: 1280px;
