--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,7 @@
 @import "nav.scss";
 @import "home.scss";
 @import "gallery/gallery.scss";
+@import "gallery/gallery1.scss";
 @import "event.scss";
 @import "contact.scss";
 @import "about.scss";
