--- a/css/styles.css
+++ b/css/styles.css
@@ -1170,4 +1170,95 @@ nav .links a {
   font-style: italic;
 }
 
+.blog-list-space {
+  max-width: 981px;
+  min-height: 950px;
+  margin: 0 auto;
+  padding-top: 156px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.blog-list-space .blog-title {
+  width: 220px;
+  height: 40px;
+  border-bottom: 2px solid black;
+  margin-bottom: 30.5px;
+}
+.blog-list-space .blog-title p {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 25px;
+  text-transform: uppercase;
+}
+.blog-list-space .blog-components {
+  max-width: 981px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.blog-list-space .blog-components .blog-reusable {
+  display: flex;
+  margin-bottom: 30px;
+  margin-right: 10px;
+}
+.blog-list-space .blog-components .blog-reusable .main-blog-date {
+  width: 60px;
+  height: 60px;
+  background-color: #EE4367;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  margin-right: 20px;
+}
+.blog-list-space .blog-components .blog-reusable .main-blog-date h1 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+}
+.blog-list-space .blog-components .blog-reusable .main-blog-date h2 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 12px;
+  font-weight: 100;
+  text-transform: uppercase;
+}
+.blog-list-space .blog-components .blog-reusable .blog-image-text .main-blog-image {
+  width: 380px;
+  height: 140px;
+  margin-bottom: 20px;
+}
+.blog-list-space .blog-components .blog-reusable .blog-image-text .main-blog-image img {
+  width: 380px;
+  height: 140px;
+  object-fit: cover;
+}
+.blog-list-space .blog-components .blog-reusable .blog-image-text .main-blog-texts {
+  width: 380px;
+}
+.blog-list-space .blog-components .blog-reusable .blog-image-text .main-blog-texts h1 {
+  font-size: 14px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-bottom: 11px;
+}
+.blog-list-space .blog-components .blog-reusable .blog-image-text .main-blog-texts h2 {
+  font-size: 11px;
+  letter-spacing: 0.3px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #EE4367;
+}
+
+@media only screen and (max-width: 966px) {
+  .blog-list-space {
+    min-height: 1470px;
+  }
+  .blog-list-space .blog-title {
+    margin: 0 auto;
+    margin-bottom: 30.5px;
+  }
+  .blog-list-space .blog-components {
+    justify-content: center;
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
