--- a/scss/blog-list.scss
+++ b/scss/blog-list.scss
@@ -30,6 +30,7 @@
         display: flex;
         margin-bottom: 30px;
         margin-right: 10px;
+        cursor: pointer;
         
         .main-blog-date {
             width: 60px;
