--- a/scss/gallery/gallery.scss
+++ b/scss/gallery/gallery.scss
@@ -28,6 +28,7 @@
             height: 187px;
             margin-right: 20px;
             margin-bottom: 20px;
+            cursor: pointer;
 
             img {
                 width: 489px;
@@ -48,6 +49,7 @@
             height: 187px;
             margin-right: 20px;
             margin-bottom: 20px;
+            cursor: pointer;
 
             img {
                 width: 187px;
@@ -67,6 +69,7 @@
             width: 265px;
             height: 187px;
             margin-bottom: 20px;
+            cursor: pointer;
 
             img {
                 width: 265px;
@@ -87,6 +90,7 @@
             height: 306px;
             margin-right: 20px;
             margin-bottom: 20px;
+            cursor: pointer;
 
             img {
                 width: 603px;
@@ -106,6 +110,7 @@
             width: 358px;
             height: 306px;
             margin-bottom: 70px;
+            cursor: pointer;
 
             img {
                 width: 358px;
