--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -12,6 +12,7 @@ nav {
     .logo {
         margin-top: 30px;
         margin-left: -8px;
+        cursor: pointer;
 
         img {
             width: 109px;
